--- a/ios/AwesomeTSProject/Info.plist
+++ b/ios/AwesomeTSProject/Info.plist
@@ -36,7 +36,7 @@
 		</dict>
 	</dict>
 	<key>NSLocationWhenInUseUsageDescription</key>
-	<string></string>
+	<string/>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIRequiredDeviceCapabilities</key>
@@ -51,5 +51,13 @@
 	</array>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<false/>
+	<key>UIAppFonts</key>
+	<array>
+		<string>FontAwesome.tff</string>
+		<string>Fontisto.tff</string>
+		<string>AntDesign.tff</string>
+		<string>Ionicons.tff</string>
+		<string>Zocial.tff</string>
+	</array>
 </dict>
 </plist>
