--- a/package.json
+++ b/package.json
@@ -14,14 +14,15 @@
     "@react-native-async-storage/async-storage": "^1.15.9",
     "@react-navigation/native": "^6.0.6",
     "@react-navigation/native-stack": "^6.2.5",
-    "@types/react-native-vector-icons": "^6.4.9",
     "graphql": "^16.0.0",
+    "moment": "^2.29.1",
     "react": "17.0.2",
     "react-native": "0.66.1",
     "react-native-safe-area-context": "^3.3.2",
     "react-native-screens": "^3.9.0",
     "react-native-svg": "^12.1.1",
     "react-native-vector-icons": "^9.0.0",
+    "realm": "^10.9.1",
     "styled-components": "^5.3.3"
   },
   "devDependencies": {
@@ -30,6 +31,7 @@
     "@react-native-community/eslint-config": "^2.0.0",
     "@types/jest": "^26.0.23",
     "@types/react-native": "^0.65.0",
+    "@types/react-native-vector-icons": "^6.4.9",
     "@types/react-test-renderer": "^17.0.1",
     "@types/styled-components": "^5.1.15",
     "babel-jest": "^26.6.3",
