--- a/ios/Podfile
+++ b/ios/Podfile
@@ -6,6 +6,14 @@ platform :ios, '11.0'
 target 'AwesomeTSProject' do
   config = use_native_modules!
 
+  # add the Firebase pod for Google Analytics
+  pod 'Firebase/Analytics'
+  # or pod ‘Firebase/AnalyticsWithoutAdIdSupport’
+  # for Analytics without IDFA collection capability
+
+# add pods for any other desired Firebase products
+# https://firebase.google.com/docs/ios/setup#available-pods
+
   use_react_native!(
     :path => config[:reactNativePath],
     # to enable hermes on iOS, change `false` to `true` and then install pods
