--- a/package.json
+++ b/package.json
@@ -12,8 +12,12 @@
   "dependencies": {
     "@apollo/client": "^3.4.16",
     "@react-native-async-storage/async-storage": "^1.15.9",
+    "@react-native-firebase/app": "^13.0.0",
+    "@react-native-firebase/crashlytics": "^13.0.0",
     "@react-navigation/native": "^6.0.6",
     "@react-navigation/native-stack": "^6.2.5",
+    "@sentry/react-native": "^3.2.1",
+    "@sentry/wizard": "^1.2.14",
     "graphql": "^16.0.0",
     "moment": "^2.29.1",
     "react": "17.0.2",
