--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@react-native-async-storage/async-storage": "^1.15.9",
     "@react-native-firebase/app": "^13.0.0",
     "@react-native-firebase/crashlytics": "^13.0.0",
+    "@react-native-firebase/remote-config": "^13.0.1",
     "@react-navigation/native": "^6.0.6",
     "@react-navigation/native-stack": "^6.2.5",
     "@sentry/react-native": "^3.2.1",
