--- a/ios/AwesomeTSProject/Info.plist
+++ b/ios/AwesomeTSProject/Info.plist
@@ -12,6 +12,8 @@
 	<string>$(PRODUCT_BUNDLE_IDENTIFIER)</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
+	<key>CodePushDeploymentKey</key>
+	<string>GkZM_LEM4l8TrsFdqoaEYD9OOPopipqsIPcQV</string>
 	<key>CFBundleName</key>
 	<string>$(PRODUCT_NAME)</string>
 	<key>CFBundlePackageType</key>
@@ -36,7 +38,7 @@
 		</dict>
 	</dict>
 	<key>NSLocationWhenInUseUsageDescription</key>
-	<string/>
+	<string></string>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIRequiredDeviceCapabilities</key>
@@ -52,12 +54,6 @@
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<false/>
 	<key>UIAppFonts</key>
-	<array>
-		<string>FontAwesome.tff</string>
-		<string>Fontisto.tff</string>
-		<string>AntDesign.tff</string>
-		<string>Ionicons.tff</string>
-		<string>Zocial.tff</string>
-	</array>
+	<array/>
 </dict>
 </plist>
