:sparkles: app building in android, fix bugs and errors

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -84,6 +84,7 @@ project.ext.react = [
 ]
 
 apply from: "../../node_modules/react-native/react.gradle"
+apply from: "../../node_modules/react-native-code-push/android/codepush.gradle"
 apply from: "../../node_modules/@sentry/react-native/sentry.gradle"
 
 /**
@@ -198,6 +199,7 @@ android {
 }
 
 dependencies {
+    compile project(':react-native-code-push')
     implementation fileTree(dir: "libs", include: ["*.jar"])
     //noinspection GradleDynamicVersion
     implementation "com.facebook.react:react-native:+"  // From node_modules
