--- a/ios/Podfile
+++ b/ios/Podfile
@@ -22,6 +22,8 @@ target 'AwesomeTSProject' do
 
 
 
+  pod 'CodePush', :path => '../node_modules/react-native-code-push'
+
   target 'AwesomeTSProjectTests' do
     inherit! :complete
     # Pods for testing
@@ -31,7 +33,7 @@ target 'AwesomeTSProject' do
   #
   # Note that if you have use_frameworks! enabled, Flipper will not work and
   # you should disable the next line.
-  use_flipper!()
+  use_flipper! ({'Flipper' => '0.74.0'})
 
   post_install do |installer|
     react_native_post_install(installer)
