--- a/ios/Podfile
+++ b/ios/Podfile
@@ -22,7 +22,6 @@ target 'AwesomeTSProject' do
 
 
 
-  pod 'CodePush', :path => '../node_modules/react-native-code-push'
 
   target 'AwesomeTSProjectTests' do
     inherit! :complete
@@ -33,7 +32,7 @@ target 'AwesomeTSProject' do
   #
   # Note that if you have use_frameworks! enabled, Flipper will not work and
   # you should disable the next line.
-  use_flipper!({ 'Flipper' => '0.91.1' })
+  use_flipper!()
 
   post_install do |installer|
     react_native_post_install(installer)
