--- a/package.json
+++ b/package.json
@@ -10,40 +10,41 @@
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx"
   },
   "dependencies": {
-    "@apollo/client": "^3.4.16",
-    "@react-native-async-storage/async-storage": "^1.15.11",
-    "@react-native-firebase/app": "^13.0.1",
-    "@react-native-firebase/crashlytics": "^13.0.1",
-    "@react-native-firebase/remote-config": "^13.0.1",
+    "@apollo/client": "^3.5.5",
+    "@react-native-async-storage/async-storage": "^1.15.14",
+    "@react-native-firebase/app": "^13.1.0",
+    "@react-native-firebase/crashlytics": "^13.1.0",
+    "@react-native-firebase/remote-config": "^13.1.0",
     "@react-navigation/native": "^6.0.6",
     "@react-navigation/native-stack": "^6.2.5",
-    "@sentry/react-native": "^3.2.3",
+    "@sentry/react-native": "^3.2.6",
     "@sentry/wizard": "^1.2.15",
     "graphql": "^16.0.1",
     "moment": "^2.29.1",
+    "npm-check-updates": "^12.0.3",
     "react": "17.0.2",
-    "react-native": "0.66.1",
+    "react-native": "0.66.3",
     "react-native-code-push": "^7.0.4",
     "react-native-dotenv": "^3.3.0",
     "react-native-safe-area-context": "^3.3.2",
-    "react-native-screens": "^3.9.0",
-    "realm": "^10.9.1",
+    "react-native-screens": "^3.10.0",
+    "realm": "^10.10.1",
     "styled-components": "^5.3.3"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.9",
-    "@babel/runtime": "^7.12.5",
-    "@react-native-community/eslint-config": "^2.0.0",
-    "@types/jest": "^26.0.23",
-    "@types/react-native": "^0.65.0",
+    "@babel/core": "^7.16.0",
+    "@babel/runtime": "^7.16.3",
+    "@react-native-community/eslint-config": "^3.0.1",
+    "@types/jest": "^27.0.3",
+    "@types/react-native": "^0.66.8",
     "@types/react-test-renderer": "^17.0.1",
-    "@types/styled-components": "^5.1.15",
-    "babel-jest": "^27.3.1",
-    "eslint": "^7.14.0",
-    "jest": "^27.3.1",
+    "@types/styled-components": "^5.1.17",
+    "babel-jest": "^27.4.2",
+    "eslint": "^8.4.0",
+    "jest": "^27.4.3",
     "metro-react-native-babel-preset": "^0.66.2",
     "react-test-renderer": "17.0.2",
-    "typescript": "^3.8.3"
+    "typescript": "^4.5.2"
   },
   "resolutions": {
     "@types/react": "^17"
